--- a/front-end/src/components/LandingPage/LandingPageBanner/LandingPageBanner.css
+++ b/front-end/src/components/LandingPage/LandingPageBanner/LandingPageBanner.css
@@ -1,8 +1,3 @@
-/* .LandingPageBanner{
-    height: 90vh;
-    background: url("../../../images/netflix_background.jpeg") no-repeat center center fixed;
-    background-size: cover;
-} */
 .LandingPageBanner_content{
     background: rgba(0,0,0,.4);
     height: 90vh;
@@ -26,50 +21,20 @@
 }
 .LandingPageBanner_content_text{
     color: white;
-    margin-top: 100px;
-    margin-left: 100px;
-    margin-right: 100px;
-}
-.LandingPageBanner_content_text_line {
-    text-align: center;
-    padding: 10px;
-}
-.one{
-    font-size: 50px;
-    font-weight: bold;
-}
-.two{
-    font-size: 25px;
-    font-weight: 600;
-
-}
-.three{
-    font-size: 25px;
-    font-weight: 600;
-
-}
-.LandingPageBanner_content_input{
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 5px;
+    text-align: center;
 }
-.LandingPageBanner_content_input input{
-    font-size: 20px;
-    height: 35px;
-    background: rgba(0,0,0,.4);
-    border: 2px solid gray;
-    border-radius: 5px;
-    padding: 15px;
-    color: white;
-}
-.LandingPageBanner_content_input button{
-    background-color: #E50914;
-    color: white;
-    font-weight: 800;
-    font-size: 25px;
-    border: none;
-    border-radius: 5px;
-    padding: 20px;
 
+.LandingPageBanner_content_text p{
+    margin: 1rem 0 0;
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+
+.LandingPageBanner_content_text h1{
+    margin: 10rem 0 0;
+    font-size: 50px;
 }
