--- a/front-end/src/components/LandingPage/LandingPageBanner/LandingPageBanner.css
+++ b/front-end/src/components/LandingPage/LandingPageBanner/LandingPageBanner.css
@@ -9,6 +9,7 @@
 .LandingPageBanner_content_navbar img{
     width: 200px;
     margin: 15px;
+    /* transform: scaleX(-1); */
 }
 .LandingPageBanner_content_navbar button{
     background-color: #E50914;
