add FAQ component with styling

--- a/front-end/src/components/LandingPage/OtherBanners/DownloadsBanner/DownloadsBanner.css
+++ b/front-end/src/components/LandingPage/OtherBanners/DownloadsBanner/DownloadsBanner.css
@@ -3,6 +3,7 @@
     align-items: center;
     justify-content: center;
     border-bottom: 10px solid rgb(41, 37, 37);
+    width: 100vw;
 }
 
 .DownloadsBanner img{
