cursor styling added to LandingPage & PricesBanner

--- a/front-end/src/components/LandingPage/LandingPage.css
+++ b/front-end/src/components/LandingPage/LandingPage.css
@@ -3,3 +3,7 @@
     background: url("../../images/netflix_background.jpeg") no-repeat center center fixed;
     background-size: cover;
 }
+
+.LandingPage button{
+    cursor: pointer;
+}
