--- a/front-end/src/components/LandingPage/LandingPage.css
+++ b/front-end/src/components/LandingPage/LandingPage.css
@@ -1,7 +1,7 @@
 .LandingPage{
     height: 112vh;
-    background: url("../../images/netflix_background.jpeg") no-repeat center center fixed;
-    background-size: cover;
+    /* background: url("../../images/netflix_background.jpeg") no-repeat center center fixed;
+    background-size: cover; */
 }
 
 .LandingPage button{
