--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,6 +1,7 @@
-/* body{
-    background-color: black;
-} */
+body{
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0,0,0,.5)), url("./images/netflix_background.jpeg") no-repeat center center fixed;
+    background-size: cover;
+}
 
 .App{
     font-family:Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;
